--- a/index.html
+++ b/index.html
@@ -4,125 +4,117 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AppBelieve Studio</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* Reset & Base */
-    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif; }
-    body { line-height:1.6; color:#fff; background-color:#f5f5f5; }
+  /* Reset cơ bản */
+  * { margin:0; padding:0; box-sizing:border-box; }
+  body { font-family: 'Roboto', sans-serif; background-color: #1a0b3b; color:#e5e7eb; }
 
-    /* Header */
-    header {
-        background-color:#003049;
-        padding:20px 40px;
-        display:flex;
-        justify-content:space-between;
-        align-items:center;
-    }
-    header h1 { font-size:1.8rem; color:#fff; }
-    nav a {
-        color:#fff;
-        text-decoration:none;
-        margin-left:30px;
-        font-weight:bold;
-        transition:color 0.3s;
-    }
-    nav a:hover { color:#ffb703; }
+  /* Header */
+  header {
+    background-color: #2c1053;
+    padding: 20px 40px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  header h1 { font-size: 1.8rem; color:#f472b6; }
+  nav a { color:#e5e7eb; text-decoration:none; margin-left:20px; font-weight:500; transition: color 0.3s; }
+  nav a:hover { color:#f472b6; }
 
-    /* Hero */
-    .hero {
-        background: linear-gradient(135deg, #003049 0%, #00798c 100%);
-        text-align:center;
-        padding:100px 20px;
-    }
-    .hero h2 { font-size:2.5rem; margin-bottom:20px; }
-    .hero p { font-size:1.2rem; margin-bottom:30px; max-width:700px; margin-left:auto; margin-right:auto; }
-    .hero a.cta {
-        display:inline-block;
-        padding:15px 30px;
-        background-color:#ffb703;
-        color:#003049;
-        font-weight:bold;
-        border-radius:6px;
-        text-decoration:none;
-        transition:background 0.3s;
-    }
-    .hero a.cta:hover { background-color:#ffaa00; }
+  /* Hero Section */
+  .hero {
+    background: linear-gradient(135deg, #2c1053, #5b21b6);
+    text-align:center;
+    padding:100px 20px 60px 20px;
+  }
+  .hero h2 { font-size:3rem; margin-bottom:20px; }
+  .hero p { font-size:1.2rem; max-width:700px; margin: 0 auto 30px auto; line-height:1.6; color:#e5e7eb; }
+  .hero a.cta {
+    background-color:#f472b6;
+    color:#1a0b3b;
+    padding:15px 30px;
+    font-weight:700;
+    text-decoration:none;
+    border-radius:8px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  .hero a.cta:hover { background-color:#ec4899; color:#fff; }
 
-    /* Sections */
-    .sections {
-        display:flex;
-        justify-content:space-between;
-        max-width:1100px;
-        margin:50px auto;
-        gap:20px;
-        flex-wrap:wrap;
-        padding:0 20px;
-    }
-    .card {
-        flex:1 1 30%;
-        background-color:#005f73;
-        padding:30px 20px;
-        border-radius:10px;
-        min-width:250px;
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .card:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.2); }
-    .card h3 { margin-bottom:15px; color:#ffb703; font-size:1.5rem; }
-    .card p { font-size:1rem; line-height:1.4; }
-    .card a { display:inline-block; margin-top:15px; color:#ffb703; text-decoration:none; font-weight:bold; }
-    .card a:hover { text-decoration:underline; }
+  /* Cards Section */
+  .cards {
+    display:flex;
+    justify-content:center;
+    gap:30px;
+    flex-wrap: wrap;
+    padding:60px 20px;
+  }
+  .card {
+    background-color:#3b0e77;
+    padding:30px;
+    border-radius:12px;
+    flex:1 1 250px;
+    max-width:300px;
+    text-align:center;
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+  .card:hover {
+    transform: translateY(-8px);
+    box-shadow:0 10px 25px rgba(0,0,0,0.3);
+  }
+  .card h3 { color:#f472b6; margin-bottom:15px; }
+  .card p { color:#e5e7eb; line-height:1.5; margin-bottom:20px; }
+  .card a { color:#f472b6; font-weight:600; text-decoration:none; transition: color 0.3s; }
+  .card a:hover { color:#ec4899; }
 
-    /* Footer */
-    footer {
-        background-color:#003049;
-        text-align:center;
-        padding:20px;
-        font-size:0.9rem;
-    }
-    footer a { color:#ffb703; text-decoration:none; }
-    footer a:hover { text-decoration:underline; }
+  /* Footer */
+  footer {
+    background-color:#2c1053;
+    text-align:center;
+    padding:30px 20px;
+    font-size:0.9rem;
+    color:#e5e7eb;
+  }
+  footer a { color:#f472b6; text-decoration:none; transition: color 0.3s; }
+  footer a:hover { color:#ec4899; }
 
-    /* Responsive */
-    @media(max-width:900px) {
-        .sections { flex-direction:column; align-items:center; }
-        .card { width:90%; }
-    }
 </style>
 </head>
 <body>
 
 <header>
-    <h1>AppBelieve Studio</h1>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="https://appbelieve.github.io/privacy.html" target="_blank">Privacy Policy</a>
-    </nav>
+  <h1>AppBelieve Studio</h1>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="https://appbelieve.github.io/privacy.html" target="_blank">Privacy Policy</a>
+  </nav>
 </header>
 
 <section class="hero" id="home">
-    <h2>Welcome to AppBelieve Studio</h2>
-    <p>We create innovative mobile applications designed to enhance your digital experience. Explore our work and enjoy seamless, intuitive apps.</p>
-    <a class="cta" href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">Our Apps</a>
+  <h2>Welcome to AppBelieve Studio</h2>
+  <p>We are dedicated to creating innovative and high-quality mobile applications. Explore our apps and discover the experience we offer to users worldwide.</p>
+  <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank" class="cta">Our Apps</a>
 </section>
 
-<section class="sections">
-    <div class="card">
-        <h3>About Us</h3>
-        <p>AppBelieve Studio is dedicated to creating high-quality mobile applications. Our focus is on user experience, innovation, and simplicity.</p>
-    </div>
-    <div class="card">
-        <h3>Our App</h3>
-        <p>We currently offer our first app on Google Play. Discover its features and enjoy a smooth, user-friendly experience designed to meet your needs.</p>
-        <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">View on Google Play</a>
-    </div>
-    <div class="card">
-        <h3>Contact</h3>
-        <p>Have questions or feedback? Reach out to us via email and we’ll get back to you promptly.</p>
-        <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a>
-    </div>
+<section class="cards">
+  <div class="card">
+    <h3>About Us</h3>
+    <p>AppBelieve Studio is a small indie developer studio focusing on high-quality, creative mobile apps.</p>
+  </div>
+  <div class="card">
+    <h3>Our Apps</h3>
+    <p>Check out all our apps on Google Play Store. We currently offer innovative solutions for wallpapers and AI tools.</p>
+    <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">View on Play Store</a>
+  </div>
+  <div class="card">
+    <h3>Contact</h3>
+    <p>If you have questions or want to reach out, email us anytime.</p>
+    <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a>
+  </div>
 </section>
 
 <footer>
-    &copy; 2025 AppBelieve Studio. All Rights Reserved. | <a href="https://appbelieve.github.io/" target="_blank">Visit Our Website</a>
+  &copy; 2025 AppBelieve Studio | <a href="https://appbelieve.github.io/" target="_blank">Website</a>
 </footer>
 
 </body>
