--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <h1>AppBelieve Studio</h1>
   <nav>
     <a href="#home">Home</a>
-    <a href="https://appbelieve.github.io/privacy.html" target="_blank">Privacy Policy</a>
+    <a href="https://appbelieve.github.io/privacy" target="_blank">Privacy Policy</a>
   </nav>
 </header>
 
