--- a/privacy.html
+++ b/privacy.html
@@ -32,6 +32,7 @@
 <li>App Permissions</li>
 <li>California Privacy Rights</li>
 <li>Virginia Privacy Rights</li>
+<li>Legal Basis for Processing (GDPR – Article 6)</li>
 <li>European Union Privacy Rights</li>
 <li>Brazil's Privacy Rights</li>
 <li>Children's Privacy</li>
@@ -238,7 +239,23 @@ iOS: Settings → Privacy → Tracking → Disable “Allow Apps to Request to T
 </ul>
 <p>We will respond in accordance with applicable privacy laws and confirm that no personal data is shared or sold for advertising purposes.</p>
 
-<h2>10. European Union Privacy Rights</h2>
+<h2>10. Legal Basis for Processing (GDPR – Article 6)</h2>
+<p>If you are located in the European Economic Area (EEA), the United Kingdom, or Switzerland, we process your personal data under one or more of the following legal bases, as required under GDPR Articles 6, 13, and 14:</p>
+
+<ul>
+    <li><strong>Consent (Art. 6(1)(a)):</strong> When you voluntarily agree to personalized advertising, analytics, or optional features. You may withdraw your consent at any time within the app settings or by contacting us.</li>
+
+    <li><strong>Legitimate Interests (Art. 6(1)(f)):</strong> For operating, maintaining, and improving app performance; preventing fraud; ensuring security; and analyzing app usage—only when such interests are not overridden by your data protection rights.</li>
+
+    <li><strong>Contractual Necessity (Art. 6(1)(b)):</strong> When processing is required to provide the core app features and functionalities you request.</li>
+
+    <li><strong>Legal Obligation (Art. 6(1)(c)):</strong> When processing is necessary for compliance with applicable laws, including responding to government, court, or regulatory requests.</li>
+</ul>
+
+<p>This section explains the legal bases we rely on when processing your personal data as required by the GDPR.</p>
+
+
+<h2>11. European Union Privacy Rights</h2>
 <p>If you are located in the European Economic Area (EEA), the United Kingdom, or Switzerland, you have rights under the General Data Protection Regulation (GDPR) and equivalent laws. We act as a data controller for personal data we collect directly and as a data processor for data handled through third-party services (such as Firebase, GA4, AdMob, and Google Ads).</p>
 
 <p>Your privacy rights include:</p>
@@ -253,7 +270,8 @@ iOS: Settings → Privacy → Tracking → Disable “Allow Apps to Request to T
 </ul>
 <p>To exercise these rights, email <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> with the subject line “GDPR Privacy Request.” We will respond in accordance with applicable EU data protection laws. You also have the right to file a complaint with your local Data Protection Authority.</p>
 
-<h2>11. Brazil’s Privacy Rights</h2>
+
+<h2>12. Brazil’s Privacy Rights</h2>
 <p>If you are located in Brazil, you have specific rights under the Lei Geral de Proteção de Dados (LGPD) regarding your personal data.</p>
 <p>Your rights under LGPD include:</p>
 <ul>
@@ -268,16 +286,19 @@ iOS: Settings → Privacy → Tracking → Disable “Allow Apps to Request to T
 </ul>
 <p>To exercise your LGPD rights, contact us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> with the subject line “LGPD Data Request.” We will respond in accordance with Brazil’s data protection law.</p>
 
-<h2>12. Children’s Privacy</h2>
+
+<h2>13. Children’s Privacy</h2>
 <p>Our apps are not specifically directed toward children under the age of 13 (or the minimum age required in your country for consent to data processing). We do not knowingly collect, use, or share personal data from children.</p>
 <p>If our app is used by a minor, we strongly encourage parents or guardians to monitor and guide their child’s app activity to ensure a safe experience. For users located in the European Union, we comply with the GDPR-K (General Data Protection Regulation for Kids). If you are under 16 years old, parental or guardian consent is required before using our services.</p>
 <p>If we discover personal information has been collected from a child without parental consent, we will immediately delete such data and inform authorities if required. If you believe we might have inadvertently collected information from a child, contact us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a>.</p>
 
-<h2>13. Policy Scope and Changes</h2>
+
+<h2>14. Policy Scope and Changes</h2>
 <p>This Privacy Policy applies to all mobile applications and related services published by AppBelieve Studio. We may update this Privacy Policy to reflect changes in practices, technologies, or legal requirements. The “Last Updated” date at the top will be revised accordingly.</p>
 <p>If changes are material, we will notify users within the app (pop-up, in-app message, or website notice) before the new policy becomes effective. We encourage users to review this Privacy Policy periodically. Continued use of our apps after any modifications means you agree to the updated terms.</p>
 
-<h2>14. Data Protection Officer (DPO) / Privacy Contact</h2>
+
+<h2>15. Data Protection Officer (DPO) / Privacy Contact</h2>
 <p>If you have questions or requests regarding your personal data, or wish to exercise your privacy rights under applicable laws, please contact our Data Protection Officer (DPO):</p>
 <ul>
 <li>Email: <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a></li>
