--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
   <nav>
     <a href="#home">Home</a>
     <a href="https://appbelieve.github.io/privacy" target="_blank">Privacy Policy</a>
+    <a href="https://appbelieve.github.io/terms-of-use" target="_blank">Terms of Use</a>
   </nav>
 </header>
 
